fixes spacing/alignment issue introduced in previous PR

--- a/app/assets/stylesheets/dul_argon/metadata.scss
+++ b/app/assets/stylesheets/dul_argon/metadata.scss
@@ -19,7 +19,7 @@
   .items, #holdings .items {
     overflow: visible;
     border: none;
-    margin: 0;
+    margin: 0 0 10px 0;
     border-left: 8px solid #ddd;
 
     .url-note-wrapper {
